# flexy

./: CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
man/: flexy.l
src/: cli.rs  commands.rs  config.rs  main.rs
src/commands/: channel.rs  start.rs
src/compositor/: mod.rs  render.rs  surface.rs  window.rs  windows.rs
src/context/: globals.rs  lua_out.rs  mod.rs  runtime.rs  widgets.rs
src/models/: compositor_config.rs  job.rs  mod.rs  skia_env.rs  styles.rs
src/utils/: font_util.rs  get_compositor_config.rs  get_lua.rs  mod.rs
src/widgets/: text.rs
