[package]
name = "flexy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
colored = "2.1.0"
dirs = "5.0.1"
env_logger = "0.11.5"
gl = "0.14.0"
glutin = "0.32.1"
glutin-winit = "0.5.0"
mlua = { version = "0.9.9", features = ["lua54"] }
raw-window-handle = "0.6.2"
serde = { version = "1.0.210", features = ["derive"] }
skia-safe = { version = "0.78.0", features = ["all-linux"] }
toml = "0.8.19"
winit = "0.30.5"
