[package]
name = "flexy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
colored = "2.1.0"
dirs = "5.0.1"
env_logger = "0.11.5"
mlua = { version = "0.9.9", features = ["lua54"] }
nannou = "0.19.0"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
